[package]
name = "monoio-duplex"
version = "0.1.0"
edition = "2021"
description = "Port of Tokio's SimplexStream and DuplexStream for Monoio"
license = "MIT"
repository = "https://github.com/SteveLauC/monoio-duplex"

[dependencies]
async-lock = "3.4.0"
bytes = "1.7.2"
monoio = "0.2.4"
futures = "0.3.31"

[dev-dependencies]
